fixed scrollbar issues on smaller resolution screens

--- a/style/about/about.css
+++ b/style/about/about.css
@@ -2,7 +2,7 @@
     width: 350px;
     background-color: #1b4fd6;
     color: white;
-    padding: 2em;
+    padding: 1em;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
